feature criação do layout da seção financeiro alunos da página area-adm, alinhamento com display flex

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -69,6 +69,12 @@
             <input type="number" name="numero-parcelas-financeiro" id="numero-parcelas-financeiro">
             <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraValorCurso()">Ver valor</a>
           </form>
+          <form class="area-adm-relatorio-aluno" action="#">
+            <h2>Relatório Aluno</h2>
+            <label for="nome-relatorio-aluno">Nome</label>
+            <input type="text" name="nome-relatorio-aluno">
+            <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraRelatorioAluno()">Buscar</a>
+          </form>
         </div>
         
       </div>
