feature estilização da seção financeiro e relatório aluno com alinhamento por display flex, ainda sem funcionalidades

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -65,6 +65,7 @@
             <h2>Financeiro</h2>
             <label for="curso-financeiro">Curso</label>
             <input type="text" name="curso-financeiro" id="curso-financeiro">
+            <p><a class="adiciona-curso" href="">Adicionar outro curso</a></p>
             <label for="numero-parcelas-financeiro">Número de parcelas</label>
             <input type="number" name="numero-parcelas-financeiro" id="numero-parcelas-financeiro">
             <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraValorCurso()">Ver valor</a>
