refactor modificação da função buscarEstudante para pegar como parâmetro o input de busca na página area-adm, seção financeiro alunos

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -73,8 +73,8 @@
           <form class="area-adm-relatorio-aluno" action="#">
             <h2>Relatório Aluno</h2>
             <label for="nome-relatorio-aluno">Nome</label>
-            <input type="text" name="nome-relatorio-aluno">
-            <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraRelatorioAluno()">Buscar</a>
+            <input type="text" name="nome-relatorio-aluno" id="nome-relatorio-aluno">
+            <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="buscarEstudante();return false">Buscar</a>
           </form>
         </div>
         
