feature adição de sublinhado no menu quando as opções são escolhidas

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -19,7 +19,7 @@
         <li><a href="../index.html">Home</a></li>
         <li><a href="../pages/cursos.html">Cursos</a></li>
         <li><a href="../pages/contato.html">Contato</a></li>
-        <li><a href="../pages/area-adm.html">Área ADM</a></li>
+        <li><a class="menu-selected" href="../pages/area-adm.html">Área ADM</a></li>
       </ul>
     </nav>
   </header>
