--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="logo-container"><img src="./assets/logo.svg" alt="Logo da LabEscola"></div>
     <nav>
       <ul class="menu">
-        <li><a href="./index.html">Home</a></li>
+        <li><a class="menu-selected"  href="./index.html">Home</a></li>
         <li><a href="./pages/cursos.html">Cursos</a></li>
         <li><a href="./pages/contato.html">Contato</a></li>
         <li><a href="./pages/area-adm.html">Área ADM</a></li>
