--- a/pages/contato.html
+++ b/pages/contato.html
@@ -18,7 +18,7 @@
       <ul class="menu">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../pages/cursos.html">Cursos</a></li>
-        <li><a href="../pages/contato.html">Contato</a></li>
+        <li><a  class="menu-selected"  href="../pages/contato.html">Contato</a></li>
         <li><a href="../pages/area-adm.html">Área ADM</a></li>
       </ul>
     </nav>
