feature adição de link no logo do header para voltar na home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <div class="logo-container"><img src="./assets/logo.svg" alt="Logo da LabEscola"></div>
+    <div class="logo-container"><a href="./index.html"><img src="../assets/logo.svg" alt="Logo da LabEscola"></a></div>
     <nav>
       <ul class="menu">
         <li><a class="menu-selected"  href="./index.html">Home</a></li>
