feature adição de links nos logos de redes sociais no footer de todas as páginas

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -107,10 +107,10 @@
       <div class="footer-links">
         <h3>Links</h3>
         <ul class="footer-list-links">
-          <li>Home</li>
-          <li>Cursos</li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./cursos.html">Cursos</a></li>
           <li>Blog</li>
-          <li>Fale conosco</li>
+          <li><a href="./contato.html">Fale conosco</a></li>
           <li>Termos e condições</li>
           <li>Política de privacidade</li>
           <li>FAQ</li>
@@ -119,16 +119,16 @@
       <div class="footer-redes-sociais">
         <h3>Redes sociais</h3>
         <div class="footer-list-redes-sociais">
-          <img src="../assets/icon-twitter1.png" alt="Logo do Twitter">
-          <img src="../assets/icon-linkedin1.png" alt="Logo do Linkedin">
-          <img src="../assets/icon-fb1.png" alt="Logo do Facebook">
-          <img src="../assets/icon-ig1.png" alt="Logo do Instagram">
+          <a href="https://twitter.com/" target="_blank"><img src="../assets/icon-twitter1.png" alt="Logo do Twitter"></a>
+          <a href="https://www.linkedin.com/in/jair-dami%C3%A1n-mart%C3%ADnez-bautista-4b35b1a6/" target="_blank"><img src="../assets/icon-linkedin1.png" alt="Logo do Linkedin"></a>
+          <a href="https://www.facebook.com/jairdamian.martinez/" target="_blank"><img src="../assets/icon-fb1.png" alt="Logo do Facebook"></a>
+          <a href="https://www.instagram.com/jairdamianmartinez/" target="_blank"><img src="../assets/icon-ig1.png" alt="Logo do Instagram"></a>
         </div>
       </div>
       <div class="footer-area-restrita">
         <h3>Área restrita</h3>
         <ul class="footer-list-pocoes-area-adm">
-          <li>Área restrita</li>
+          <li><a href="./area-adm.html">Área restrita</a></li>
           <li>Espaço do aluno</li>
         </ul>
       </div>
