refactor adição e implementação de imagens dos alunos de depoimentos como sugerido no figma

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </nav>
   </header>
   <main>
+    <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="./assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
     <section class="top-content">
       <h1 id="titulo-top-content">Descubra o novo ensino!</h1>
       <p id="frase-top-content">Aprenda de verdade, no seu tempo, no seu ritmo</p>
@@ -37,19 +38,19 @@
       <h2 id="titulo-bottom-content">Depoimentos</h2>
       <div class="depoimentos-container">
         <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
+          <div class="foto-depoimento"><img src="./assets/aluno-depoimento1.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
         <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
+          <div class="foto-depoimento"><img src="./assets/aluno-depoimento2.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
         <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
+          <div class="foto-depoimento"><img src="./assets/aluno-depoimento3.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
         <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/foto-depoimento-1.png" alt="Foto do estudante"></div>
+          <div class="foto-depoimento"><img src="./assets/aluno-depoimento4.png" alt="Foto do estudante"></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
         </div>
       </div>
