--- a/pages/contato.html
+++ b/pages/contato.html
@@ -23,6 +23,7 @@
       </ul>
     </nav>
   </header>
+  <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="../assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
   <section class="contato-content">
     <form class="contato-formulario" action="#">
       <h2 class="contato-titulo-formulario">Fale Conosco</h2>
