--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -24,6 +24,7 @@
     </nav>
   </header>
   <main>
+    <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="../assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
     <section class="cursos-top-content">
       <div class="cursos-descricao-cards-container">
         <div class="cursos-card">
