feature adição de funcionalidade no botão QUERO FAZER PARTE na página curso para abrir o servidor de email

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cursos</title>
-  <script src="script.js"></script>
+  <script src="../script.js"></script>
   <link rel="stylesheet" href="../style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +40,8 @@
           <p class="cursos-cards-descricao">Maecenas ullamcorper, metus eu mattis tristique, ante metus ultrices ex, vel auctor tortor dolor nec dui. Nullam vestibulum eleifend ipsum elementum accumsan. Fusce tempus finibus odio a faucibus. Etiam justo ante, viverra ut iaculis vel, vulputate sed massa. Quisque tincidunt ultricies enim, ac</p>
         </div>
       </div>
-      <a class="botao-quero-fazer-parte" href="./cursos.html">Quero fazer parte!</a>
+      <a class="botao-quero-fazer-parte" href="./cursos.html" onclick="sendMail(); return false">Quero fazer parte!</a>
+      
     </section>
     <section class="cursos-bottom-content">
       <div class="cursos-bottom-content-card">
