feature adição de logo svg sem fundo no projeto e aplicação no footer

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -94,7 +94,7 @@
   </main>
   <footer class="footer-container">
     <div class="footer-top-content">
-      <img class="footer-top-content-logo" src="../assets/logo.svg" alt="Logo">
+      <img class="footer-top-content-logo" src="../assets/logo1.svg" alt="Logo">
     </div>
     <div class="footer-bottom-content">
       <div class="footer-endereco">
