--- a/pages/contato.html
+++ b/pages/contato.html
@@ -39,7 +39,7 @@
         <label for="mensagem">Mensagem</label>
         <textarea name="mensagem" id="mensagem" cols="40" rows="13"></textarea>
       </div>
-      <button type="submit">Enviar</button>
+      <a class='botao-enviar-contato' href="./contato.html">Enviar</a>
     </form>
   </section>
   <footer class="footer-container">
