fix correção de código que adicionava classes para alternar entre conteúdo turmas, matrículas e financeiro na página area adm, de usar setatribute, passei a usar classList remove e add

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -41,7 +41,7 @@
       </div>
       <!-- Fim Layout de opção Turmas -->
       <!-- Início Layout de opção Matrículas -->
-      <div class="area-adm-main-matriculas">
+      <div id="area-adm-matriculas-container" class="area-adm-main-matriculas">
         <div id="area-adm-matriculas" class="area-adm-matriculas-container">
           <form class="area-adm-matriculas-form" action="#">
             <h2>Matrículas</h2>
