feature checagem de preenchimento dos inputs na hora de enviar o formulario de contato com mensagem de alert para completar preenchimento ou mensagem para mensagem enviada com sucesso

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -39,7 +39,7 @@
         <label for="mensagem">Mensagem</label>
         <textarea name="mensagem" id="mensagem" cols="40" rows="10"></textarea>
       </div>
-      <a class='botao-enviar-contato' href="./contato.html">Enviar</a>
+      <a class='botao-enviar-contato' href="./contato.html" onclick="enviaInfoContato();return false">Enviar</a>
     </form>
   </section>
   <footer class="footer-container">
