--- a/pages/contato.html
+++ b/pages/contato.html
@@ -29,15 +29,15 @@
       <h2 class="contato-titulo-formulario">Fale Conosco</h2>
       <div class="contato-form-grupo">
         <label for="nome">Nome</label>
-        <input class="contato-inputs" type="text" name="nome" id="nome">
+        <input required class="contato-inputs" type="text" name="nome" id="nome">
       </div>
       <div class="contato-form-grupo">
         <label for="email">Email</label>
-        <input class="contato-inputs" type="email" name="email" id="email">
+        <input required class="contato-inputs" type="email" name="email" id="email">
       </div>
       <div class="contato-form-grupo">
         <label for="mensagem">Mensagem</label>
-        <textarea name="mensagem" id="mensagem" cols="40" rows="10"></textarea>
+        <textarea required name="mensagem" id="mensagem" cols="40" rows="10"></textarea>
       </div>
       <a class='botao-enviar-contato' href="./contato.html" onclick="enviaInfoContato();return false">Enviar</a>
     </form>
