feature adição de comentários no index html separando as seções do index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- INICIO HEADER -->
   <header>
     <div class="logo-container"><a href="./index.html"><img src="../assets/logo.svg" alt="Logo da LabEscola"></a></div>
     <nav>
@@ -23,17 +24,23 @@
       </ul>
     </nav>
   </header>
+  <!-- FIM HEADER -->
   <main>
     <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="./assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
+    <!-- INICIO TOP CONTENT-->
     <section class="top-content">
       <h1 id="titulo-top-content">Descubra o novo ensino!</h1>
       <p id="frase-top-content">Aprenda de verdade, no seu tempo, no seu ritmo</p>
       <a id="botao-conheca-cursos" href="./pages/cursos.html">Conheça nossos cursos</a>
     </section>
+    <!-- FIM TOP CONTENT-->
+    <!-- INICIO MIDDLE CONTENT SOBRE NÓS-->
     <section class="middle-content">
       <h2 id="titulo-middle-content">Sobre Nós</h2>
       <p id="sobre-nos-middle-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt.  Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum </p>
     </section>
+    <!-- FIM MIDDLE CONTENT SOBRE NÓS-->
+    <!-- INICIO BOTTOM CONTENT DEPOIMENTOS-->
     <section class="bottom-content">
       <h2 id="titulo-bottom-content">Depoimentos</h2>
       <div class="depoimentos-container">
@@ -55,7 +62,9 @@
         </div>
       </div>
     </section>
+    <!-- FIM BOTTOM CONTENT DEPOIMENTOS-->
   </main>
+  <!-- INICIO FOOTER -->
   <footer class="footer-container">
     <div class="footer-top-content">
       <img class="footer-top-content-logo" src="./assets/logo1.svg" alt="Logo">
@@ -96,8 +105,8 @@
           <li>Espaço do aluno</li>
         </ul>
       </div>
-      
     </div>
   </footer>
+  <!-- FIM FOOTER -->
 </body>
 </html>
