feature adição de comentários na página cursos separando as seções

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- INICIO DO HEADER -->
   <header>
     <div class="logo-container"><a href="../index.html"><img src="../assets/logo.svg" alt="Logo da LabEscola"></a></div>
     <nav>
@@ -23,8 +24,10 @@
       </ul>
     </nav>
   </header>
+  <!-- FIM DO HEADER -->
   <main>
     <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="../assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
+    <!-- INICIO DO TOP CONTENT CARDS COM DESCRIÇÃO DE CURSOS -->
     <section class="cursos-top-content">
       <div class="cursos-descricao-cards-container">
         <div class="cursos-card">
@@ -41,8 +44,9 @@
         </div>
       </div>
       <a class="botao-quero-fazer-parte" href="./cursos.html" onclick="sendMail(); return false">Quero fazer parte!</a>
-      
     </section>
+    <!-- FIM DO TOP CONTENT CARDS COM DESCRIÇÃO DE CURSOS -->
+    <!-- INICIO DO BOTTOM CONTENT CARDS COM CONTEÚDO PROGRAMÁTICO DOS CURSOS POR MÓDULOS -->
     <section class="cursos-bottom-content">
       <div class="cursos-bottom-content-card">
         <h2 class="cursos-bottom-content-titulo">HTML e CSS</h2>
@@ -108,7 +112,9 @@
         </div>
       </div>
     </section>
+    <!-- FIM DO BOTTOM CONTENT CARDS COM CONTEÚDO PROGRAMÁTICO DOS CURSOS POR MÓDULOS -->
   </main>
+  <!-- INICIO DO FOOTER -->
   <footer class="footer-container">
     <div class="footer-top-content">
       <img class="footer-top-content-logo" src="../assets/logo1.svg" alt="Logo">
@@ -149,9 +155,8 @@
           <li>Espaço do aluno</li>
         </ul>
       </div>
-      
     </div>
   </footer>
-  
+  <!-- FIM DO FOOTER -->
 </body>
 </html>
