feature adição de comentários na página contato separando as seções

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- INICIO DO HEADER -->
   <header>
     <div class="logo-container"><a href="../index.html"><img src="../assets/logo.svg" alt="Logo da LabEscola"></a></div>
     <nav>
@@ -23,7 +24,9 @@
       </ul>
     </nav>
   </header>
+  <!-- FIM DO HEADER -->
   <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="../assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
+  <!-- INICIO DO CONTENT COM O FORM DE CONTATO -->
   <section class="contato-content">
     <form class="contato-formulario" action="#">
       <h2 class="contato-titulo-formulario">Fale Conosco</h2>
@@ -42,6 +45,8 @@
       <a class='botao-enviar-contato' href="./contato.html" onclick="enviaInfoContato();return false">Enviar</a>
     </form>
   </section>
+  <!-- FIM DO CONTENT COM O FORM DE CONTATO -->
+  <!-- INICIO DO FOOTER -->
   <footer class="footer-container">
     <div class="footer-top-content">
       <img class="footer-top-content-logo" src="../assets/logo1.svg" alt="Logo">
@@ -82,8 +87,8 @@
           <li>Espaço do aluno</li>
         </ul>
       </div>
-      
     </div>
   </footer>
+  <!-- FIM DO FOOTER -->
 </body>
 </html>
