fix mudar src do logo na página index pois estava errado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- INICIO HEADER -->
   <header>
-    <div class="logo-container"><a href="./index.html"><img src="../assets/logo.svg" alt="Logo da LabEscola"></a></div>
+    <div class="logo-container"><a href="./index.html"><img src="./assets/logo1.svg" alt="Logo da LabEscola"></a></div>
     <nav>
       <ul class="menu">
         <li><a class="menu-selected"  href="./index.html">Home</a></li>
