--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -69,7 +69,7 @@
             <h2>Financeiro</h2>
             <label for="curso-financeiro">Curso</label>
             <input required type="text" name="curso-financeiro" id="curso-financeiro">
-            <p><a class="adiciona-curso" href="">Adicionar outro curso</a></p>
+            <p><a class="adiciona-curso" href="./area-adm.html" onclick="adicionarCarrinho();return false;">Adicionar outro curso</a></p>
             <label for="numero-parcelas-financeiro">Número de parcelas</label>
             <input required type="number" name="numero-parcelas-financeiro" id="numero-parcelas-financeiro">
             <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraValorCurso()">Ver valor</a>
