feature ajuste da função parcelarcurso para que assim que o botão Ver Valor for acionado ele faça o calculo do valor dos cursos , caso eles já tenham sido adicionados

--- a/pages/area-adm.html
+++ b/pages/area-adm.html
@@ -72,7 +72,7 @@
             <p><a class="adiciona-curso" href="./area-adm.html" onclick="adicionarCarrinho();return false;">Adicionar outro curso</a></p>
             <label for="numero-parcelas-financeiro">Número de parcelas</label>
             <input required type="number" name="numero-parcelas-financeiro" id="numero-parcelas-financeiro">
-            <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="mostraValorCurso()">Ver valor</a>
+            <a class="area-adm-botao-financeiro" href="../pages/area-adm.html" onclick="parcelarCurso();return false;">Ver valor</a>
           </form>
           <div class="area-adm-relatorio-aluno-container">
             <form class="area-adm-relatorio-aluno" action="#">
