--- a/pages/contato.html
+++ b/pages/contato.html
@@ -7,6 +7,7 @@
   <title>Contato</title>
   <script src="../script.js"></script>
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../efeitofade.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
