--- a/index.html
+++ b/index.html
@@ -1,113 +1,216 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
-  <script src="script.js"></script>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="efeitofade.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <!-- INICIO HEADER -->
-  <header>
-    <div class="logo-container"><a href="./index.html"><img src="./assets/logo1.svg" alt="Logo da LabEscola"></a></div>
-    <nav>
-      <ul class="menu">
-        <li><a class="menu-selected"  href="./index.html">Home</a></li>
-        <li><a href="./pages/cursos.html">Cursos</a></li>
-        <li><a href="./pages/contato.html">Contato</a></li>
-        <li><a href="./pages/area-adm.html">Área ADM</a></li>
-      </ul>
-    </nav>
-  </header>
-  <!-- FIM HEADER -->
-  <main>
-    <a href="https://wa.link/lsvbsn" target="_blank"><img class="icone-whatsapp" src="./assets/whatsapp-icon.png" alt="Icone do WhatsApp"></a>
-    <!-- INICIO TOP CONTENT-->
-    <section class="top-content">
-      <h1 id="titulo-top-content">Descubra o novo ensino!</h1>
-      <p id="frase-top-content">Aprenda de verdade, no seu tempo, no seu ritmo</p>
-      <a id="botao-conheca-cursos" href="./pages/cursos.html">Conheça nossos cursos</a>
-    </section>
-    <!-- FIM TOP CONTENT-->
-    <!-- INICIO MIDDLE CONTENT SOBRE NÓS-->
-    <section class="middle-content">
-      <h2 id="titulo-middle-content">Sobre Nós</h2>
-      <p id="sobre-nos-middle-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt.  Id mauris cursus sed a interdum integer tincidunt. Arcu aliquam vestibulum </p>
-    </section>
-    <!-- FIM MIDDLE CONTENT SOBRE NÓS-->
-    <!-- INICIO BOTTOM CONTENT DEPOIMENTOS-->
-    <section class="bottom-content">
-      <h2 id="titulo-bottom-content">Depoimentos</h2>
-      <div class="depoimentos-container">
-        <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/aluno-depoimento1.png" alt="Foto do estudante"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
-        </div>
-        <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/aluno-depoimento2.png" alt="Foto do estudante"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
-        </div>
-        <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/aluno-depoimento3.png" alt="Foto do estudante"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
-        </div>
-        <div class="depoimentos-card">
-          <div class="foto-depoimento"><img src="./assets/aluno-depoimento4.png" alt="Foto do estudante"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam vestibulum. Nullam nec at et metus tempor, ornare id elit tincidunt consectetur adipiscing elit.</p>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="efeitofade.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- INICIO HEADER -->
+    <header>
+      <div class="logo-container">
+        <a href="./index.html"
+          ><img src="./assets/logo1.svg" alt="Logo da LabEscola"
+        /></a>
       </div>
-    </section>
-    <!-- FIM BOTTOM CONTENT DEPOIMENTOS-->
-  </main>
-  <!-- INICIO FOOTER -->
-  <footer class="footer-container">
-    <div class="footer-top-content">
-      <img class="footer-top-content-logo" src="./assets/logo1.svg" alt="Logo">
-    </div>
-    <div class="footer-bottom-content">
-      <div class="footer-endereco">
-        <h3>Endereço</h3>
-        <div>
-          <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="280" id="gmap_canvas" src="https://maps.google.com/maps?q=rua%20pa%C3%ADs%20leme%20215&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><a href="https://www.embedgooglemap.net">interactive google map for website</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:280px;width:400px;}</style></div></div>
-          <p>R. Pais Leme, 215. CEP 05424-150 - Pinheiros</p>
-        </div>
-      </div><!--  -->
-      <div class="footer-links">
-        <h3>Links</h3>
-        <ul class="footer-list-links">
-          <li><a href="./index.html">Home</a></li>
+      <nav>
+        <div class="menu-burguer"><img src="./assets/menu-icon.png" alt=""></div>
+        <ul class="menu">
+          <li><a class="menu-selected" href="./index.html">Home</a></li>
           <li><a href="./pages/cursos.html">Cursos</a></li>
-          <li>Blog</li>
-          <li><a href="./pages/contato.html">Fale conosco</a></li>
-          <li>Termos e condições</li>
-          <li>Política de privacidade</li>
-          <li>FAQ</li>
+          <li><a href="./pages/contato.html">Contato</a></li>
+          <li><a href="./pages/area-adm.html">Área ADM</a></li>
         </ul>
+      </nav>
+    </header>
+    <!-- FIM HEADER -->
+    <main>
+      <a href="https://wa.link/lsvbsn" target="_blank"
+        ><img
+          class="icone-whatsapp"
+          src="./assets/whatsapp-icon.png"
+          alt="Icone do WhatsApp"
+      /></a>
+      <!-- INICIO TOP CONTENT-->
+      <section class="top-content">
+        <h1 id="titulo-top-content">Descubra o novo ensino!</h1>
+        <p id="frase-top-content">
+          Aprenda de verdade, no seu tempo, no seu ritmo
+        </p>
+        <a id="botao-conheca-cursos" href="./pages/cursos.html"
+          >Conheça nossos cursos</a
+        >
+      </section>
+      <!-- FIM TOP CONTENT-->
+      <!-- INICIO MIDDLE CONTENT SOBRE NÓS-->
+      <section class="middle-content">
+        <h2 id="titulo-middle-content">Sobre Nós</h2>
+        <p id="sobre-nos-middle-content">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo
+          faucibus vitae pretium amet lorem id. Id mauris cursus sed a interdum
+          integer tincidunt. Arcu aliquam vestibulum eget ut velit aliquam nulla
+          rutrum at. Nullam nec at et metus tempor, ornare id elit tincidunt. Id
+          mauris cursus sed a interdum integer tincidunt. Arcu aliquam
+          vestibulum
+        </p>
+      </section>
+      <!-- FIM MIDDLE CONTENT SOBRE NÓS-->
+      <!-- INICIO BOTTOM CONTENT DEPOIMENTOS-->
+      <section class="bottom-content">
+        <h2 id="titulo-bottom-content">Depoimentos</h2>
+        <div class="depoimentos-container">
+          <div class="depoimentos-card">
+            <div class="foto-depoimento">
+              <img
+                src="./assets/aluno-depoimento1.png"
+                alt="Foto do estudante"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam
+              vestibulum. Nullam nec at et metus tempor, ornare id elit
+              tincidunt consectetur adipiscing elit.
+            </p>
+          </div>
+          <div class="depoimentos-card">
+            <div class="foto-depoimento">
+              <img
+                src="./assets/aluno-depoimento2.png"
+                alt="Foto do estudante"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam
+              vestibulum. Nullam nec at et metus tempor, ornare id elit
+              tincidunt consectetur adipiscing elit.
+            </p>
+          </div>
+          <div class="depoimentos-card">
+            <div class="foto-depoimento">
+              <img
+                src="./assets/aluno-depoimento3.png"
+                alt="Foto do estudante"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam
+              vestibulum. Nullam nec at et metus tempor, ornare id elit
+              tincidunt consectetur adipiscing elit.
+            </p>
+          </div>
+          <div class="depoimentos-card">
+            <div class="foto-depoimento">
+              <img
+                src="./assets/aluno-depoimento4.png"
+                alt="Foto do estudante"
+              />
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo uam
+              vestibulum. Nullam nec at et metus tempor, ornare id elit
+              tincidunt consectetur adipiscing elit.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- FIM BOTTOM CONTENT DEPOIMENTOS-->
+    </main>
+    <!-- INICIO FOOTER -->
+    <footer class="footer-container">
+      <div class="footer-top-content">
+        <img
+          class="footer-top-content-logo"
+          src="./assets/logo1.svg"
+          alt="Logo"
+        />
       </div>
-      <div class="footer-redes-sociais">
-        <h3>Redes sociais</h3>
-        <div class="footer-list-redes-sociais">
-          <a href="https://twitter.com/" target="_blank"><img src="./assets/icon-twitter1.png" alt="Logo do Twitter"></a>
-          <a href="https://www.linkedin.com/in/jair-dami%C3%A1n-mart%C3%ADnez-bautista-4b35b1a6/" target="_blank"><img src="./assets/icon-linkedin1.png" alt="Logo do Linkedin"></a>
-          <a href="https://www.facebook.com/jairdamian.martinez/" target="_blank"><img src="./assets/icon-fb1.png" alt="Logo do Facebook"></a>
-          <a href="https://www.instagram.com/jairdamianmartinez/" target="_blank"><img src="./assets/icon-ig1.png" alt="Logo do Instagram"></a>
+      <div class="footer-bottom-content">
+        <div class="footer-endereco">
+          <h3>Endereço</h3>
+          <div>
+            <div class="mapouter">
+              <div class="gmap_canvas">
+                <iframe
+                  width="400"
+                  height="280"
+                  id="gmap_canvas"
+                  src="https://maps.google.com/maps?q=rua%20pa%C3%ADs%20leme%20215&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                  frameborder="0"
+                  scrolling="no"
+                  marginheight="0"
+                  marginwidth="0"
+                ></iframe
+                ><a href="https://fmovies-online.net">fmovies</a><br /><a
+                  href="https://www.embedgooglemap.net"
+                  >interactive google map for website</a
+                ><style>
+                  .gmap_canvas {
+                    overflow: hidden;
+                    background: none !important;
+                    height: 280px;
+                    width: 400px;
+                  }
+                </style>
+              </div>
+            </div>
+            <p>R. Pais Leme, 215. CEP 05424-150 - Pinheiros</p>
+          </div>
+        </div>
+        <!--  -->
+        <div class="footer-links">
+          <h3>Links</h3>
+          <ul class="footer-list-links">
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/cursos.html">Cursos</a></li>
+            <li>Blog</li>
+            <li><a href="./pages/contato.html">Fale conosco</a></li>
+            <li>Termos e condições</li>
+            <li>Política de privacidade</li>
+            <li>FAQ</li>
+          </ul>
+        </div>
+        <div class="footer-redes-sociais">
+          <h3>Redes sociais</h3>
+          <div class="footer-list-redes-sociais">
+            <a href="https://twitter.com/" target="_blank"
+              ><img src="./assets/icon-twitter1.png" alt="Logo do Twitter"
+            /></a>
+            <a
+              href="https://www.linkedin.com/in/jair-dami%C3%A1n-mart%C3%ADnez-bautista-4b35b1a6/"
+              target="_blank"
+              ><img src="./assets/icon-linkedin1.png" alt="Logo do Linkedin"
+            /></a>
+            <a
+              href="https://www.facebook.com/jairdamian.martinez/"
+              target="_blank"
+              ><img src="./assets/icon-fb1.png" alt="Logo do Facebook"
+            /></a>
+            <a
+              href="https://www.instagram.com/jairdamianmartinez/"
+              target="_blank"
+              ><img src="./assets/icon-ig1.png" alt="Logo do Instagram"
+            /></a>
+          </div>
+        </div>
+        <div class="footer-area-restrita">
+          <h3>Área restrita</h3>
+          <ul class="footer-list-pocoes-area-adm">
+            <li><a href="./pages/area-adm.html">Área restrita</a></li>
+            <li>Espaço do aluno</li>
+          </ul>
         </div>
       </div>
-      <div class="footer-area-restrita">
-        <h3>Área restrita</h3>
-        <ul class="footer-list-pocoes-area-adm">
-          <li><a href="./pages/area-adm.html">Área restrita</a></li>
-          <li>Espaço do aluno</li>
-        </ul>
-      </div>
-    </div>
-  </footer>
-  <!-- FIM FOOTER -->
-</body>
+    </footer>
+    <!-- FIM FOOTER -->
+  </body>
 </html>
