feat adição de classes para posterior lógica de hamburguer-menu para telas menores

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         /></a>
       </div>
       <nav>
-        <div class="menu-burguer"><img src="./assets/menu-icon.png" alt=""></div>
+        <div class="menu-burguer">
+          <img src="./assets/menu-icon.png" alt="" />
+        </div>
         <ul class="menu">
           <li><a class="menu-selected" href="./index.html">Home</a></li>
           <li><a href="./pages/cursos.html">Cursos</a></li>
@@ -35,6 +37,12 @@
     </header>
     <!-- FIM HEADER -->
     <main>
+      <!-- <ul class="links-menu-burguer">
+        <li><a class="menu-selected" href="./index.html">Home</a></li>
+        <li><a href="./pages/cursos.html">Cursos</a></li>
+        <li><a href="./pages/contato.html">Contato</a></li>
+        <li><a href="./pages/area-adm.html">Área ADM</a></li>
+      </ul> -->
       <a href="https://wa.link/lsvbsn" target="_blank"
         ><img
           class="icone-whatsapp"
